# ragadoc

./: .dockerignore  .gitignore  DEVELOPMENT_INSTRUCTIONS.md  Dockerfile  PDF_EXTRACTION_SUMMARY.md  PDF_HIGHLIGHTING_README.md  RAG_IMPLEMENTATION.md  README-Docker.md  README.md  SIMPLIFICATION_ANALYSIS.md  TECH_STACK_RECOMMENDATIONS.md  app.py  app_enhanced.py  debug_text_matching.py  demo_highlighting.py  docker-compose.gpu.yml  docker-compose.yml  docker.env.example  enhanced_pdf_processor.py  env.example  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_extraction_demo.py  test_extraction.py  test_highlighting.py  test_highlighting_debug.py  test_highlighting_improvements.py  test_highlighting_simple.py  test_unicode_quotes.py
.streamlit/: config.toml
examples/: README.md  demo_highlighting.py
experiments/: README.md  debug_context.py  simplified_extraction_demo.py  test_improved_extraction.py  test_rag.py
ragadoc/: __init__.py  chat_manager.py  config.py  enhanced_pdf_processor.py  llm_interface.py  model_manager.py  pageindex_rag.py  rag_system.py  ui_chat.py  ui_config.py  ui_document.py  ui_session.py  ui_sidebar.py
ragadoc/themes/: README.md  classic.css  darkstreaming.css
ragnarok/: __init__.py  chat_manager.py  core.py  enhanced_pdf_processor.py  rag_system.py  ui_config.py  ui_session.py
ragnarok.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  test_ai_response.py  test_enhanced_pdf_processor.py  test_extraction.py  test_highlighting.py  test_pymupdf_core.py  test_rag_system.py  test_smoke.py  test_text_matching.py  test_unicode_quotes.py  test_utils.py
